--- a/src/app/pages/users/user/user.page.html
+++ b/src/app/pages/users/user/user.page.html
@@ -3,7 +3,7 @@
     <ion-buttons slot="start">
       <ion-back-button></ion-back-button>
     </ion-buttons>
-    <ion-title>Add Personddddddddddddddddddddd</ion-title>
+    <ion-title><span class="space">left - space</span><span>Users</span><span class="space">right - s p a c e</span></ion-title>
   </ion-toolbar>
 </ion-header>
 
