--- a/src/app/pages/users/users.page.scss
+++ b/src/app/pages/users/users.page.scss
@@ -8,6 +8,7 @@ ion-content ion-grid ion-row ion-list ion-item {
 }
 ion-header ion-toolbar ion-title .space {
     opacity: 0;
+    color: transparent;
 }
 .fakebtn {
     opacity: 0;
